--- a/.github/workflows/cut-release-workflow.yml
+++ b/.github/workflows/cut-release-workflow.yml
@@ -6,4 +6,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: cut-release-action
+      - uses: ./github/actions/cut-release-action
