--- a/.github/workflows/cut-release-workflow.yml
+++ b/.github/workflows/cut-release-workflow.yml
@@ -1,9 +1,16 @@
+# Source of inspiration:
+# https://github.com/lablnet/create-branch-from-tag
 name: cut-release
 run-name: ${{ github.actor }} has cut a new release
 on: [release]
 jobs:
-  make-fresh-release–branch:
+  make_fresh_release_branch:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: ./github/actions/cut-release-action
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          owner: ${{ github.repository_owner }}
+          repo: ${{ github.event.repository.name }}
