--- a/.github/workflows/cut-release-workflow.yml
+++ b/.github/workflows/cut-release-workflow.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./github/actions/cut-release-action
+      - uses: ./.github/actions/cut-release-action
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
