--- a/.github/actions/cut-release-action/tsconfig.json
+++ b/.github/actions/cut-release-action/tsconfig.json
@@ -1,9 +1,6 @@
 {
+    "extends": "@tsconfig/node16/tsconfig.json",
     "compilerOptions": {
-        "lib": ["ESNext"],
-        "outDir": "dist",
-        "removeComments": true,
-        "target": "esnext",
-        "moduleResolution": "node"
+        "outDir": "dist"
     }
 }
