--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
     "@types/node": "^18.11.9",
     "tsc": "^2.0.4",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
+    "add": "^2.0.6",
+    "yarn": "^1.22.19"
   }
 }
